--- a/ContactApi/appsettings.json
+++ b/ContactApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "Secret": "WQW79-OFFKDI940NG7-56753253-SADVF-5769-0921-DSD987987SA"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
